<resources>
    <string name="app_name">ShahenatUserApp</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>
    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>


    <string name="driver">Driver</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="txt_forgot">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="we_sent_6_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="verify_and_proceed">Verify and Proceed</string>
    <string name="title_activity_home_actiivity">Map</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="type">Type</string>
    <string name="date_from">Date (From)</string>
    <string name="date_to">Date (To)</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="no_of_vehicles">No of Vehicles</string>
    <string name="availability">Availability</string>
    <string name="payment">Payment</string>
    <string name="ride_history">Ride history</string>
    <string name="promocode">Promocode</string>
    <string name="support">Support</string>
    <string name="sign_out"><u>Sign out</u></string>
    <string name="book_ride">Book ride</string>
    <string name="ride_options">Ride options</string>
    <string name="color">Color</string>
    <string name="number_plate">Number Plate</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="note_you_can_t_ignore_paying_the_20_saudi_riyal_for_more_than_3_times_and_if_you_did_your_account_will_be_closed_until_you_pay_60_saudi_riyal"><b>NOTE:</b> You can\'t ignore paying the 20 saudi riyal for more than 3 times and if you did , your account will be closed until you pay 60 saudi riyal</string>
    <string name="book">Book</string>
    <string name="negotiate">Negotiate</string>
    <string name="my_amount">My Amount</string>
    <string name="driver_amount">Driver Amount</string>
    <string name="negotiation_amount">Negotiation Amount</string>
    <string name="arriving">Arriving</string>
    <string name="cancel_trip">Cancel trip</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason for cancellation:</string>
    <string name="i_don_t_want_to_share">I don’t want to share</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="submit">Submit</string>
    <string name="i_m_coming">I\'m Coming</string>
    <string name="btn_bg_white">btn_bg_white</string>
    <string name="call">Call</string>
    <string name="payment_options">Payment options</string>
    <string name="wallet">Wallet</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate">Rate</string>
    <string name="message">Message</string>
    <string name="promo_code_coupon">Promo Code / Coupon</string>
    <string name="apply_code"><u>Apply Code</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home_address">Home Address</string>
    <string name="terms2">the <u>Terms and Conditions</u></string>
    <string name="terms3">and <u> Privacy Policy </u>.</string>

    <string name="terms1">By continuing, I confirm that I have read and agree to</string>
    <string name="purchase_plan">Purchase Plan</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="recharge">Recharge</string>
    <string name="_255">$ 255</string>
    <string name="available_balance">Available Balance</string>
    <string name="payment_history">Payment History</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="recharge_wallet_through">Recharge Wallet through</string>
    <string name="earnings">Earnings</string>
    <string name="today">Today</string>
    <string name="yelowtaxi_free">YelowTAxi Free</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="category">Category</string>
    <string name="next">Next</string>
    <string name="cash_pay">Cash Pay</string>
    <string name="_25_40_trips">$25/ 40 Trips</string>
    <string name="_50_90_trips">$25/ 40 Trips</string>
    <string name="_100_120_trips">$25/ 40 Trips</string>
    <string name="equipments">Equipments</string>

    <string name="facebook_app_id">580138633236938</string>
    <string name="please_wait">please wait...</string>


    <string name="thank_you_for_signing_up">Thank you for signing up!</string>
    <string name="sign_in_successful">Login successful!</string>
    <string name="please_check_your_email_id">Please check your mail id</string>
    <string name="wrong_email_id">Wrong email id</string>

    <string name="please_enter_email">Please enter email.</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp">Otp</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_otp">Please enter OTP.</string>
    <string name="invalid_otp">invalid OTP</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="otp_text">We\'ll send you a OTP to your register email.</string>
    <string name="password_changes_successfully">Password changes successfully</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="mobile_number">Mobile number</string>
    <string name="required">required</string>
    <string name="enter_valid_number">Please enter 10 digit phone number.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select image from</string>
    <string name="profile">Profile</string>
    <string name="did_not_received">Didn\'t received the Otp? Resend</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter new password.</string>
    <string name="enter_confirm_password">Enter confirm password.</string>
    <string name="password_does_not_matched">Password doesn\'t matched</string>
    <string name="no_driver_available_in_this_area">No driver available in this area</string>
    <string name="booking_send_successfully">Booking Request send successfully</string>

    <string name="race_ask">Race ask</string>
    <string name="location_of_taken_in_charge">location of taken in charge</string>
    <string name="destination_address">Destination address</string>
    <string name="completed">Completed</string>
    <string name="fare">Fare</string>

    <string name="new_booking_request">New Booking Request</string>
    <string name="new_chat_msg_user">New Chat Message from User</string>
    <string name="booking_cancel_by_user">Booking cancel by user</string>

    <string name="booking_accept_by_driver">Booking Accepted By Driver.</string>
    <string name="driver_start_the_race">Driver has started the race.</string>
    <string name="driver_finish_race">Driver has finished the race.</string>
    <string name="new_msg_from_driver">New Chat Message from Driver.</string>
    <string name="booking_cancel_by_driver">Booking cancel by driver.</string>
    <string name="pay_in">Pay in</string>
    <string name="duration">Duration</string>

    <string name="navigate">Navigate</string>
    <string name="arrived">Arrived</string>
    <string name="slide_to_begin_trip">Slide to begin Trip</string>
    <string name="slide_to_end_trip">Slide to End Trip</string>
    <string name="pick_up_passenger">Pick Up Passenger</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="destination">Destination</string>
    <string name="are_you_sure_you_have_arrived_at_pickup_location_of_passenger">Are you sure you have arrived at pickup location of passenger?</string>
    <string name="ok">Ok</string>
    <string name="driver_arrived">Driver Arrived</string>
    <string name="your_trip_has_begin">Your trip has begin</string>
    <string name="your_trip_is_finished">Your trip is finished</string>
    <string name="trip_start">Trip Start</string>
    <string name="trip_end">Trip End</string>
    <string name="driver_arrived_pickup_location">Driver has arrived on pickup location.</string>


</resources>