<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <ImageView
                android:id="@+id/Imgback"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/arw_left"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                >
            </ImageView>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_wallet"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:id="@+id/RRUserLoogin"
            android:background="@drawable/btn_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            >

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_32sdp"
                android:gravity="center"
                android:text="@string/_255"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/available_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>



        </LinearLayout>

        <TextView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recharge_wallet_through"
            android:textColor="@color/gray_new"
            android:textSize="@dimen/_16sdp"
            />

        <RelativeLayout
            android:layout_margin="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:background="@drawable/edt_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            >

            <LinearLayout
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/card"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    >

                </ImageView>

                <TextView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card"
                    android:textColor="@color/black_new"
                    android:textSize="@dimen/_16sdp"
                    />

            </LinearLayout>

            <ImageView
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/back"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                >

            </ImageView>

        </RelativeLayout>

    </LinearLayout>

</layout>