<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:background="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            >

            <LinearLayout
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="@dimen/_360sdp"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    >

                    <ImageView
                        android:id="@+id/imgUser"
                        android:src="@drawable/user"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        >
                    </ImageView>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Carson"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/txtUserEmail"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="carson@mobility.com"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRRideHistory"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ride_history"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRPayment"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRPromocode"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promocode"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp"
                 />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRwallet"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRSupport"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RRSignOut"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_50sdp">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textColor="@color/red"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>


    </LinearLayout>

</layout>
