<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <ImageView
                android:id="@+id/Imgback"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/arw_left"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                >
            </ImageView>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_trip"
                android:textColor="@color/black_new"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textStyle="bold"
                    android:padding="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_select_the_reason_for_cancellation"
                    android:textColor="@color/black_new"
                    android:textSize="@dimen/_16sdp"
                    />

                <LinearLayout
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:src="@drawable/check"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        >
                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_don_t_want_to_share"
                        android:textColor="@color/black_new"
                        android:textSize="@dimen/_16sdp"
                       />

                </LinearLayout>


                <View
                    android:background="@color/gra_new"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>


                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:src="@drawable/uncheck"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        >
                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/can_t_contact_the_driver"
                        android:textColor="@color/black_new"
                        android:textSize="@dimen/_16sdp"
                        />

                </LinearLayout>

                <View
                    android:background="@color/gra_new"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>



                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:src="@drawable/uncheck"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        >
                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver_is_late"
                        android:textColor="@color/black_new"
                        android:textSize="@dimen/_16sdp"
                        />

                </LinearLayout>

                <View
                    android:background="@color/gra_new"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>


                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:src="@drawable/uncheck"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        >
                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_price_is_not_reasonable"
                        android:textColor="@color/black_new"
                        android:textSize="@dimen/_16sdp"
                        />

                </LinearLayout>

                <View
                    android:background="@color/gra_new"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>

                <LinearLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:src="@drawable/uncheck"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        >
                    </ImageView>

                    <TextView
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pickup_address_is_incorrect"
                        android:textColor="@color/black_new"
                        android:textSize="@dimen/_16sdp"
                        />

                </LinearLayout>

                <View
                    android:background="@color/gra_new"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">

                </View>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:layout_margin="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:id="@+id/RRSubmit"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/btn_bg_yellow_20"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <TextView
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>


        </RelativeLayout>

    </RelativeLayout>

</layout>